--- a/belajarJS.html
+++ b/belajarJS.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BELAJAR JS</title>
-    <script type="text/javascript" src="array.js"></script>
+    <script type="text/javascript" src="kelasFullstack.js"></script>
   </head>
   <body></body>
 </html>
