--- a/belajarJS.html
+++ b/belajarJS.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BELAJAR JS</title>
-    <script type="text/javascript" src="kelasFullstack.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script src="kelasFullstack.js"></script>
+  </body>
 </html>
