--- a/belajarJS.html
+++ b/belajarJS.html
@@ -7,6 +7,13 @@
     <title>BELAJAR JS</title>
   </head>
   <body>
+    <button
+      id="btn1"
+      onclick="clickButton()"
+      onmouseover="ubahText()"
+      onmouseout="oriText()"
+    ></button>
     <script src="kelasFullstack.js"></script>
   </body>
+  `
 </html>
