--- a/belajarJS.html
+++ b/belajarJS.html
@@ -13,6 +13,15 @@
       onmouseover="ubahText()"
       onmouseout="oriText()"
     ></button>
+    <br />
+    <br />
+    <br />
+    <button
+      id="btn2"
+      onclick="clickButton2()"
+      onmouseover="ubahText2()"
+      onmouseout="oriText2()"
+    ></button>
     <script src="kelasFullstack.js"></script>
   </body>
   `
